--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
 <h1>Hello, Rails!</h1>
 
-<h3>Home#index</h3>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= link_to "My Blog", posts_path %>
