--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,17 +18,7 @@
 </p>
 
 <h2>Comments</h2>
-<% @post.comments.each do |comment| %>
-  <p>
-    <b>Commenter:</b>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <b>Comment:</b>
-    <%= raw comment.body.nl2br %>
-  </p>
-<% end %>
+<%= render @post.comments %>
 
 <h3>Add a comment:</h3>
 <%= form_for([@post, @post.comments.build]) do |f| %>
