--- a/app/views/comments/_comment.erb
+++ b/app/views/comments/_comment.erb
@@ -7,3 +7,9 @@
   <b>Comment:</b>
   <%= raw comment.body.nl2br %>
 </p>
+
+<p>
+  <%= link_to 'Destroy Comment', [comment.post, comment],
+               :confirm => 'Are you sure?',
+               :method => :delete %>
+</p>
